[package]
name = "learn_pingora"
version = "0.1.0"
edition = "2021"
authors = ["JLer <jlerxky@live.com>"]

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
common_x = { version = "0.4", default-features = false, features = [
    "tls",
    "config",
    "graceful",
    "log",
    "signal",
] }
flume = "0.11"
pingora = "0.2"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
# missing_copy_implementations = "warn"
# missing_debug_implementations = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"
